Fix AppendLatin1Test module access issue
- Remove non-existent @compile/module directive
- Add --add-opens java.base/java.lang=ALL-UNNAMED for reflection access

Co-authored-by: Qwen-Coder <qwen-coder@alibabacloud.com>